@@ -1,0 +1,7 @@
+{
+  "variants": {
+    "": {
+      "model": "supreme_mining_dimension:block/nether_isles_ruined_portal"
+    }
+  }
+}
