@@ -6,8 +6,8 @@
   "block.supreme_mining_dimension.benitoite_crystal_small": "Small Benitoite Crystal",
   "block.supreme_mining_dimension.tin_block": "Block of Tin",
   "enchantment.supreme_mining_dimension.flame_resistance_augment": "Flame Resistance Augment",
-  "block.supreme_mining_dimension.dense_diamond_ore": "Dense Diamond Ore",
   "block.supreme_mining_dimension.dense_iron_ore": "Dense Iron Ore",
+  "block.supreme_mining_dimension.dense_diamond_ore": "Dense Diamond Ore",
   "subtitles.smd.biome.endercaves": "Biome Music Plays",
   "item.supreme_mining_dimension.it_came_from_deeper": "Music Disc",
   "item.supreme_mining_dimension.emerald_mornings.desc": "Azureddraig - Emerald Mornings",
@@ -309,6 +309,7 @@
   "item.supreme_mining_dimension.silver_nugget": "Silver Nugget",
   "item.supreme_mining_dimension.raw_platinum": "Raw Platinum",
   "entity.supreme_mining_dimension.blazing_wither_master": "Blazing Wither Master",
+  "block.supreme_mining_dimension.nether_isles_ruined_portal": "Nether Isles Ruined Portal",
   "subtitles.smd.record.alwaysbeenhere": "Always been here Plays",
   "item.supreme_mining_dimension.aluminum_nugget": "Aluminum Nugget",
   "item.supreme_mining_dimension.shadow_creeper_spawn_egg": "Creeper Shade Spawn Egg",
