@@ -1,0 +1,8 @@
+{
+  "parent": "block/cube_all",
+  "textures": {
+    "all": "supreme_mining_dimension:blocks/magma_heated",
+    "particle": "supreme_mining_dimension:blocks/magma_heated"
+  },
+  "render_type": "solid"
+}
